Fix index.html title and improve .gitignore

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- TODO: Enable these content security policies, have to put the <script> and CSS(?) items in a real file then -->
     <!--meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'"-->
     <!--meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'"-->
-    <title>Hello World!</title>
+    <title>Privateer Real Estate Finder</title>
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
