--- a/sections/dashboard.html
+++ b/sections/dashboard.html
@@ -15,5 +15,5 @@
     <h2>What will we use as well?</h2>
     Figma for design, Redux for predictable state containers for javascript, Flux for the application architecture
 
-    Also using jQuery, SortableJS, Angular, Electron-cgi (for communicating with other apps)
+    Also using jQuery, Angular, Electron-cgi (for communicating with other apps)
 </div>
