Initial draft for fetching website content

--- a/sections/dashboard.html
+++ b/sections/dashboard.html
@@ -16,4 +16,13 @@
     Figma for design, Redux for predictable state containers for javascript, Flux for the application architecture
 
     Also using jQuery, Angular, Electron-cgi (for communicating with other apps)
+
+    <h2>Where do you want to look?</h2>
+    <div class="">
+        <input type="text" id="fname" name="fname" value="TibiaMMO">
+        <button class="btn btn-secondary my-2 my-sm-0" id="startCrawl" onclick="startCrawl()">Search</button>
+        <button class="btn btn-secondary my-2 my-sm-0" id="stopCrawl" onclick="stopCrawl()">Stop</button>
+    </div>
+
+    
 </div>
