--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="./node_modules/angular-route/angular-route.js"></script>
     <script>window.$ = window.jQuery = require('jquery');</script>
     <script src="./js/ui-controller.js"></script>
+    <script src="./js/crawler.js"></script>
     
   </head>
   <body>
