--- a/sections/dashboard.html
+++ b/sections/dashboard.html
@@ -24,6 +24,10 @@
 
     Also using jQuery, Angular, Electron-cgi (for communicating with other apps)
 
+    - Selenium for crawling
+    - Mozilla Geckodriver for using Firefox to crawl
+    - Tweetinvi for talking to the Twitter API
+
     <h2>Where do you want to look?</h2>
     <div class="">
         <input type="text" id="fname" name="fname" value="TibiaMMO">
