Add get-all-spiders to Notes page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <script src="./node_modules/angular-route/angular-route.js"></script>
     <script>window.$ = window.jQuery = require('jquery');</script>
     <script src="./js/ui-controller.js"></script>
+    <!-- TODO: Is it better to load it here, or later? -->
+    <script src="./js/APIconnection.js"></script>
     <script src="./js/crawler.js"></script>
+    <script src="./js/spiders.js"></script>
     
   </head>
   <body>
