Sidemenu now has new names and icons

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
   <body>
     <div id="side-menu" class="side-nav">
       <a id="side-menu-button" class="btn-close" onclick="toggleSideMenu()">
-        <svg width="20" height="30">
+        <svg id="side-menu-button-svg" width="20" height="30">
           <path d="M30,0 0,15" stroke="#fff" stroke-width="5"/>
           <path d="M30,30 0,15" stroke="#fff" stroke-width="5"/>
         </svg>
       </a>
       <a href="#!dashboard"><svg class="nav-icon">
         <use xlink:href="assets/img/icons.svg#icon-dashboard"></use></svg>
-        <div id="side-menu-dashboard" style="display: inline;">Dashboard</div>
+        <div id="side-menu-dashboard" style="display: inline;">Feed</div>
       </a>
-      <a href="#!notes"><svg class="nav-icon">
-        <use xlink:href="assets/img/icons.svg#icon-notes"></use></svg>
-        <div id="side-menu-notes" style="display: inline;">Notes</div>
+      <a href="#!estateagencies"><svg class="nav-icon">
+        <use xlink:href="assets/img/icons.svg#icon-house"></use></svg>
+        <div id="side-menu-estateagencies" style="display: inline;">Makelaars</div>
       </a>
       <a href="#!support"><svg class="nav-icon">
         <use xlink:href="assets/img/icons.svg#icon-support"></use></svg>
