--- a/sections/estateagencies.html
+++ b/sections/estateagencies.html
@@ -18,17 +18,46 @@
 
 <!-- Content -->
 <div id="content">
-    <h1>Spiders</h1>
-    <div id="spiderGrid" class="container">
+    <h1>Makelaars</h1>
+    <div id="estateagenciesGrid" class="container">
+        <div class="row">
+            <div class="col-sm font-weight-bold">
+            Sleutel
+            </div>
+            <div class="col-sm font-weight-bold">
+            Naam
+            </div>
+            <div class="col-sm font-weight-bold">
+            Actief
+            </div>
+        </div>
+        <!-- TODO: remove this placeholder -->
         <div class="row">
             <div class="col-sm">
-            Key
+            placeholder
             </div>
             <div class="col-sm">
-            Name
+            placeholder_MoenMakelaars
             </div>
             <div class="col-sm">
-            Active
+                <label class="switch">
+                    <input type="checkbox" checked>
+                    <span class="slider"></span>
+                </label>
+            </div>
+        </div>
+    </div>
+    <h1>Robots</h1>
+    <div id="spiderGrid" class="container">
+        <div class="row">
+            <div class="col-sm font-weight-bold">
+            Sleutel
+            </div>
+            <div class="col-sm font-weight-bold">
+            Naam
+            </div>
+            <div class="col-sm font-weight-bold">
+            Status
             </div>
         </div>
     </div>
