Clean up more unused and dead code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <script src="./js/ui-controller.js"></script>
     <!-- TODO: Is it better to load it here, or later? -->
     <script src="./js/APIconnection.js"></script>
-    <script src="./js/crawler.js"></script>
     <script src="./js/spiders.js"></script>
     
   </head>
@@ -30,7 +29,7 @@
       </a>
       <a href="#!dashboard"><svg class="nav-icon">
         <use xlink:href="assets/img/icons.svg#icon-dashboard"></use></svg>
-        <div id="side-menu-dashboard" style="display: inline;">Feed</div>
+        <div id="side-menu-dashboard" style="display: inline;">Nieuwsfeed</div>
       </a>
       <a href="#!estateagencies"><svg class="nav-icon">
         <use xlink:href="assets/img/icons.svg#icon-house"></use></svg>
