--- a/sections/dashboard.html
+++ b/sections/dashboard.html
@@ -4,12 +4,7 @@
 <!-- Top nav bar -->
 <nav class="navbar">
     <div class="">
-        <button class="btn btn-secondary my-2 my-sm-0" id="connectionStatus" onclick="connectionStatus()">Status</button>
-    </div>
-    <div id="crawlerConnectionStatusTooltip" class="my-2 my-lg-0" title="Unknown">
-        <svg height="50" width="50">
-            <circle id="crawlerConnectionStatusIcon" cx="25" cy="25" r="10" stroke="grey" stroke-width="3" fill="grey"></circle>
-        </svg>
+        <button class="btn btn-primary my-2 my-sm-0" id="placeholder">placeholder</button>
     </div>
 </nav>
 
@@ -27,23 +22,5 @@
     - Selenium for crawling
     - Mozilla Geckodriver for using Firefox to crawl
     - Tweetinvi for talking to the Twitter API
-
-    <h2>Where do you want to look?</h2>
-    <div class="">
-        <input type="text" id="fname" name="fname" value="TibiaMMO">
-        <button class="btn btn-secondary my-2 my-sm-0" id="startCrawl" onclick="startCrawl()">Search</button>
-        <button class="btn btn-secondary my-2 my-sm-0" id="stopCrawl" onclick="stopCrawl()">Stop</button>
-        <button class="btn btn-secondary my-2 my-sm-0" id="startCrawl" onclick="getLatestCrawl()">GetLatestCrawl</button>
-        
-
-        <h2>Instellingen</h2>
-        <form id="input">
-            <label for="i_version">Versie</label><input id="i_version" type="text"></br>
-            <label for="i_date">Datum</label><input id="i_date" type="text"></br>
-            <label for="i_platform">Platform</label><input id="i_platform" type="text"></br>
-            <label for="i_isNew">Nieuw</label><input id="i_isNew" type="checkbox"></br>
-        </form>
-    </div>
-
     
 </div>
