--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div id="side-menu" class="side-nav">
       <a id="side-menu-button" class="btn-close" onclick="toggleSideMenu()">
-        <svg id="side-menu-button-svg" width="20" height="30">
+        <svg id="side-menu-button-svg" class="btn-close-svg" width="20" height="30">
           <path d="M30,0 0,15" stroke="#fff" stroke-width="5"/>
           <path d="M30,30 0,15" stroke="#fff" stroke-width="5"/>
         </svg>
