--- a/sections/estateagencies.html
+++ b/sections/estateagencies.html
@@ -5,37 +5,32 @@
     <div class="">
         <button class="btn btn-primary my-2 my-sm-0" id="getAllSpiders" onclick="getAllSpiders()">GetAllSpiders</button>
     </div>
-    <div id="crawlerConnectionStatusTooltip" class="my-2 my-lg-0" title="Unknown">
-        <svg height="50" width="50">
-            <circle id="crawlerConnectionStatusIcon" cx="25" cy="25" r="10" stroke="grey" stroke-width="3" fill="grey"></circle>
-        </svg>
-    </div>
 </nav>
 
 <!-- Content -->
 <div id="content">
-    <h1>Makelaars</h1>
+    <h1 class="d-flex justify-content-center">Makelaars</h1>
     <div id="estateagenciesGrid" class="container">
-        <div class="row">
-            <div class="col-sm font-weight-bold">
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-4 font-weight-bold d-flex justify-content-center">
             Sleutel
             </div>
-            <div class="col-sm font-weight-bold">
+            <div class="col-sm-4 font-weight-bold d-flex justify-content-center">
             Naam
             </div>
-            <div class="col-sm font-weight-bold">
+            <div class="col-sm-4 font-weight-bold d-flex justify-content-center">
             Actief
             </div>
         </div>
         <!-- TODO: remove this placeholder -->
-        <div class="row">
-            <div class="col-sm">
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-4 d-flex justify-content-center">
             placeholder
             </div>
-            <div class="col-sm">
+            <div class="col-sm-4 d-flex justify-content-center">
             placeholder_MoenMakelaars
             </div>
-            <div class="col-sm">
+            <div class="col-sm-4 d-flex justify-content-center">
                 <label class="switch">
                     <input type="checkbox" checked>
                     <span class="slider"></span>
@@ -43,16 +38,16 @@
             </div>
         </div>
     </div>
-    <h1>Robots</h1>
+    <h1 class="d-flex justify-content-center">Robots</h1>
     <div id="spiderGrid" class="container">
-        <div class="row">
-            <div class="col-sm font-weight-bold">
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-4 font-weight-bold d-flex justify-content-center">
             Sleutel
             </div>
-            <div class="col-sm font-weight-bold">
+            <div class="col-sm-4 font-weight-bold d-flex justify-content-center">
             Naam
             </div>
-            <div class="col-sm font-weight-bold">
+            <div class="col-sm-4 font-weight-bold d-flex justify-content-center">
             Status
             </div>
         </div>
