--- a/sections/estateagencies.html
+++ b/sections/estateagencies.html
@@ -47,7 +47,10 @@
             <div class="col-sm-4 font-weight-bold d-flex justify-content-center">
             Naam
             </div>
-            <div class="col-sm-4 font-weight-bold d-flex justify-content-center">
+            <div class="col-sm-2 font-weight-bold d-flex justify-content-center">
+            Actief
+            </div>
+            <div class="col-sm-2 font-weight-bold d-flex justify-content-center">
             Status
             </div>
         </div>
